Missing changes added