@@ -241,7 +241,7 @@ public class DocGenService {
     while (textNavigation.hasNext()) {
       var item = (TextSelection) textNavigation.nextSelection();
 
-      if (item.getText().contains("Conditional") && !dataReplacement.isBlank()) {
+      if (item.getText().contains("Conditional") && !org.apache.commons.lang3.StringUtils.isBlank(dataReplacement)) {
         StringJoiner value = new StringJoiner(" ");
         value.add(documentTemplateSource.getConditionalValue() == null ? ""
             : documentTemplateSource.getConditionalValue());
